--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,66 +1,6 @@
 /*========== BASIC ==========*/
 
-.main-page {
-	margin-top: 100px;
+.div-carousel {
+	min-width: 500px;
+	max-width: 500px;
 }
-
-.carousel-inner > .item > img {
-	margin: 0 auto;
-}
-
-
-
-/*========== HELPER MARGINS ==========*/
-.mb0 { margin-bottom: 0px; }
-.mb1 { margin-bottom: 1px; }
-.mb2 { margin-bottom: 2px; }
-.mb3 { margin-bottom: 3px; }
-.mb4 { margin-bottom: 4px; }
-.mb5 { margin-bottom: 5px; }
-.mb10 { margin-bottom: 10px; }
-.mb15 { margin-bottom: 15px; }
-.mb20 { margin-bottom: 20px; }
-.mb25 { margin-bottom: 25px; }
-.mb30 { margin-bottom: 30px; }
-.mb35 { margin-bottom: 35px; }
-.mb40 { margin-bottom: 40px; }
-.mb45 { margin-bottom: 45px; }
-.mb50 { margin-bottom: 50px; }
-.mb60 { margin-bottom: 60px; }
-.mb70 { margin-bottom: 70px; }
-.mb80 { margin-bottom: 80px; }
-.mb90 { margin-bottom: 90px; }
-.mb100 { margin-bottom: 100px; }
-.mt0 { margin-top: 0px; }
-.mt1 { margin-top: 1px; }
-.mt2 { margin-top: 2px; }
-.mt3 { margin-top: 3px; }
-.mt4 { margin-top: 4px; }
-.mt5 { margin-top: 5px; }
-.mt6 { margin-top: 6px; }
-.mt7 { margin-top: 7px; }
-.mt8 { margin-top: 8px; }
-.mt9 { margin-top: 9px; }
-.mt10 { margin-top: 10px; }
-.mt15 { margin-top: 15px; }
-.mt20 { margin-top: 20px; }
-.mt25 { margin-top: 25px; }
-.mt30 { margin-top: 30px; }
-.mt35 { margin-top: 35px; }
-.mt40 { margin-top: 40px; }
-.mt45 { margin-top: 45px; }
-.mt50 { margin-top: 50px; }
-.mt60 { margin-top: 60px; }
-.mt70 { margin-top: 70px; }
-.mt80 { margin-top: 80px; }
-.mt90 { margin-top: 90px; }
-.mt100 { margin-top: 100px; }
-.ml5 { margin-left: 5px }
-.ml10 { margin-left: 10px }
-.ml15 { margin-left: 15px }
-.ml20 { margin-left: 20px }
-.ml40 { margin-left: 40px }
-.mr5 { margin-right: 5px }
-.mr10 { margin-right: 10px }
-.mr15 { margin-right: 15px }
-.mr20 { margin-right: 20px }
